--- a/01_miniproject_1_tabular_data.ipynb
+++ b/01_miniproject_1_tabular_data.ipynb
@@ -1,1 +1,238 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"01_miniproject_1_tabular_data.ipynb","provenance":[],"collapsed_sections":["TppBhRBlJDVY","FeNWY55nK_BL","k2LeKUflLehC","c8XPEDl7ocFX","D-_gt2iopuDn","YUK7yRtEp2NA","Q_arrqLoqADy"],"authorship_tag":"ABX9TyN2F+UlpDo2BDdRV2WfQHir"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["# Data Loading and Splitting"],"metadata":{"id":"TppBhRBlJDVY"}},{"cell_type":"markdown","source":["## Setup"],"metadata":{"id":"oi-C2we-Jm62"}},{"cell_type":"code","source":["%%capture\n","# Install libraries"],"metadata":{"id":"jiMUo9UNJbQ8"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["## Download the dataset"],"metadata":{"id":"hzPonF2gJSGJ"}},{"cell_type":"code","source":["# Your code here"],"metadata":{"id":"zU6xhRJeqW6u"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["## Split your data"],"metadata":{"id":"Ub5Kk1R8JUGh"}},{"cell_type":"code","source":["# Your code here"],"metadata":{"id":"IndTO6FoqYHJ"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["# EDA & data visualization"],"metadata":{"id":"FeNWY55nK_BL"}},{"cell_type":"code","source":["# Your code here"],"metadata":{"id":"C5LTCMdzLZcu"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["# Feature engineering and transformation"],"metadata":{"id":"k2LeKUflLehC"}},{"cell_type":"code","source":["# Your code here"],"metadata":{"id":"uFI8CYpdLhLk"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["# Traditional ML modeling"],"metadata":{"id":"c8XPEDl7ocFX"}},{"cell_type":"code","source":["# Your code here"],"metadata":{"id":"BE3kYpzuqJyf"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["# Pure `torch` model"],"metadata":{"id":"D-_gt2iopuDn"}},{"cell_type":"code","source":["# Your code here"],"metadata":{"id":"tJt0WDtKqLRc"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["# High-level libraries and tabular frameworks"],"metadata":{"id":"YUK7yRtEp2NA"}},{"cell_type":"code","source":["# Your code here"],"metadata":{"id":"MZZBEen8qMYI"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["# Model selection and test set evaluation"],"metadata":{"id":"Q_arrqLoqADy"}},{"cell_type":"code","source":["# Your code here"],"metadata":{"id":"A2qfdqQsqNfV"},"execution_count":null,"outputs":[]},{"cell_type":"markdown","source":["# Notes and findings\n","\n","What did you learn?"],"metadata":{"id":"PHqN9LsZLpet"}}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "01_miniproject_1_tabular_data.ipynb",
+      "provenance": [],
+      "collapsed_sections": [
+        "TppBhRBlJDVY",
+        "FeNWY55nK_BL",
+        "k2LeKUflLehC",
+        "c8XPEDl7ocFX",
+        "D-_gt2iopuDn",
+        "YUK7yRtEp2NA",
+        "Q_arrqLoqADy"
+      ]
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Loading and Splitting"
+      ],
+      "metadata": {
+        "id": "TppBhRBlJDVY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Testing save to github. Saved ✅"
+      ],
+      "metadata": {
+        "id": "qlPraz-iMiuT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Setup"
+      ],
+      "metadata": {
+        "id": "oi-C2we-Jm62"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%capture\n",
+        "# Install libraries"
+      ],
+      "metadata": {
+        "id": "jiMUo9UNJbQ8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Download the dataset"
+      ],
+      "metadata": {
+        "id": "hzPonF2gJSGJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code here"
+      ],
+      "metadata": {
+        "id": "zU6xhRJeqW6u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Split your data"
+      ],
+      "metadata": {
+        "id": "Ub5Kk1R8JUGh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code here"
+      ],
+      "metadata": {
+        "id": "IndTO6FoqYHJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# EDA & data visualization"
+      ],
+      "metadata": {
+        "id": "FeNWY55nK_BL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code here"
+      ],
+      "metadata": {
+        "id": "C5LTCMdzLZcu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Feature engineering and transformation"
+      ],
+      "metadata": {
+        "id": "k2LeKUflLehC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code here"
+      ],
+      "metadata": {
+        "id": "uFI8CYpdLhLk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Traditional ML modeling"
+      ],
+      "metadata": {
+        "id": "c8XPEDl7ocFX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code here"
+      ],
+      "metadata": {
+        "id": "BE3kYpzuqJyf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Pure `torch` model"
+      ],
+      "metadata": {
+        "id": "D-_gt2iopuDn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code here"
+      ],
+      "metadata": {
+        "id": "tJt0WDtKqLRc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# High-level libraries and tabular frameworks"
+      ],
+      "metadata": {
+        "id": "YUK7yRtEp2NA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code here"
+      ],
+      "metadata": {
+        "id": "MZZBEen8qMYI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Model selection and test set evaluation"
+      ],
+      "metadata": {
+        "id": "Q_arrqLoqADy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Your code here"
+      ],
+      "metadata": {
+        "id": "A2qfdqQsqNfV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Notes and findings\n",
+        "\n",
+        "What did you learn?"
+      ],
+      "metadata": {
+        "id": "PHqN9LsZLpet"
+      }
+    }
+  ]
+}
