testing commit message

--- a/01_miniproject_1_tabular_data.ipynb
+++ b/01_miniproject_1_tabular_data.ipynb
@@ -36,7 +36,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Testing save to github. Saved ✅"
+        "Testing save to github. Saved ✅\n",
+        "Testing commit messages\n",
+        "\n"
       ],
       "metadata": {
         "id": "qlPraz-iMiuT"
